# bullseye-api

./: .dockerignore  .renderignore  Dockerfile  Procfile  README.md  RENDER_DEPLOYMENT.md  RENDER_DEPLOYMENT_GUIDE.md  bullseye_api.py  game_logic.py  globals.py  manifest.yml  pyproject.toml  render.yaml  requirements.txt  requirements_optimized.txt  setup.py
models/: pipeline.config
models/checkpoint/: checkpoint  ckpt-0.index
models/saved_model/variables/: variables.index
