[build-system]
requires = ["setuptools>=65.0.0", "wheel>=0.38.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bullseye-api"
version = "1.0.0"
description = "Bullseye Dart Detection API"
requires-python = ">=3.9,<3.13"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "opencv-python-headless>=4.8.1.78",
    "numpy==1.26.0",
    "tensorflow-cpu==2.15.0",
    "python-multipart>=0.0.6",
    "psutil>=5.9.0",
    "Pillow>=9.5.0",
    "typing-extensions<4.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[tool.setuptools]
packages = ["bullseye_api"]
